--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -43,7 +43,9 @@ li:nth-of-type(2n) {
 	width: 360px;
 	background: #f7f7f7;
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-	transition: 0.2s all;
+	transition: 0.2s height;
+	-moz-transition: 0.2s height;
+	-webkit-transition: 0.2s height;
 }
 
 .completed {
